fix overlapping buttons in urlbar

--- a/chrome/includes/cascade-responsive.css
+++ b/chrome/includes/cascade-responsive.css
@@ -11,7 +11,7 @@
 
   }
   
-  #nav-bar #urlbar-container { min-width: 0px !important; }
+  #nav-bar #urlbar-container { min-width: 0px !important; width: auto !important; }
 
 
   #titlebar {
